# buttercut

./: .gitignore  .luacheckrc  CHANGELOG.md  CLAUDE.md  Makefile
.claude/scripts/: lint_fuses.rb  script_extractor.rb  verify_fuses.rb
.github/workflows/: lint.yml
docs/sprints/: sprint-01-editorial-automation.md  sprint-01-resolve-api-audit.md
fuses/ChromaPulse/: ChromaPulse.fuse  manifest.json
fuses/FilmGrain/: FilmGrain.fuse  manifest.json
fuses/LightLeak/: LightLeak.fuse  manifest.json
fuses/VHSGlitch/: manifest.json  (+1 more)
hyperframes/: hyperframes.config.json  package-lock.json  package.json
lib/: buttercut.rb
scripts/: 002_migrate_add_transcript_refinement.rb  003_migrate_add_summary.rb  004_migrate_add_theme.rb  005_migrate_add_broll.rb  006_migrate_add_code_vocabulary.rb  check_desktop_prereqs.sh  resolve_api_audit.py  verify_phase_4.sh  verify_phase_4_resolve.py
spec/: broll_manifest_spec.rb  broll_renderer_spec.rb  buttercut_spec.rb  fuse_library_spec.rb  generate_apply_script_spec.rb  migrate_add_broll_spec.rb  migrate_add_code_vocabulary_spec.rb  migrate_add_theme_spec.rb  recipe_from_roughcut_spec.rb  recipe_spec.rb  theme_spec.rb
templates/: broll_template.yaml  highlight_reel_recipe.md  highlight_reel_template.yaml  library_template.yaml  roughcut_template.yaml  settings_template.yaml
themes/: corporate-clean.yaml  tutorial-dark.yaml  vlog-warm.yaml
ui/: README.md  index.html  package.json  pnpm-lock.yaml
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+160 files in other folders)
