[package]
name = "buttercut-desktop"
version = "0.1.0"
description = "ButterCut desktop shell"
authors = ["ButterCut"]
edition = "2021"

[lib]
name = "buttercut_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process", "sync", "macros", "rt-multi-thread", "time"] }
once_cell = "1"
urlencoding = "2"
